Various changes to helper system

--- a/backend/support/developer/Frontend1.html
+++ b/backend/support/developer/Frontend1.html
@@ -14,9 +14,6 @@
 	<meta name="keywords" content="">
 
 
-
-
-
 	<!-- Twitter Card data -->
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:title" content="Frontend">
@@ -205,9 +202,11 @@
 							SNAPS TOOLS, and some assets from the Unity Asset Store to help us model the rooms in which our virtual
 							cinema will take place in.</span></p>
 					<p class="rvps2"><span class="rvts12"><br /></span></p>
-					<p class="rvps2"><img alt="" style="padding : 1px;"
+					<p class="rvps2" style="text-align: center;">
+						<img alt="" style="padding : 1px;" width="800" height="400"
 							src="https://camo.githubusercontent.com/417b9e442496229cf5fd751b86b60b73ce2279dadf9ad67919b07f71ede625a1/68747470733a2f2f756e69747933642e636f6d2f70726f66696c65732f756e69747933642f7468656d65732f756e6974792f696d616765732f70616765732f6272616e64696e675f74726164656d61726b732f756e6974792d6d77752d626c61636b2e706e67"><span
-							class="rvts6"></span></p>
+							class="rvts6">
+					</p>
 				</div>
 
 
