--- a/backend/support/developer/Backend.html
+++ b/backend/support/developer/Backend.html
@@ -199,14 +199,16 @@
 					<p class="rvps2"><span class="rvts12">The backend has been developed using MySQL as the database, and having
 							NodeJS ExpressJS framework server as the server, alognside Sequelize acting as the ORM.</span></p>
 					<p class="rvps2"><span class="rvts12"><br /></span></p>
-					<p class="rvps2"><img alt="" style="padding : 1px;"
-							src="https://miro.medium.com/max/900/1*HTy1M1eFC7GoW6odSukQVw.png"></p>
-					<p class="rvps2"><img alt="" style="padding : 1px;"
+					<p class="rvps2">
+						<img alt="ExpressJS" style="padding : 1px;" width="600" height="300"
+							src="https://miro.medium.com/max/900/1*HTy1M1eFC7GoW6odSukQVw.png">
+						<img alt="NodeJS" style="padding : 1px;" width="400" height="200"
 							src="https://camo.githubusercontent.com/7072b110e23339ac00169ad3337ee267ef4cd533171787b9fd7852e2e8bb08f2/68747470733a2f2f63646e2e706978616261792e636f6d2f70686f746f2f323031352f30342f32332f31372f34312f6e6f64652d6a732d3733363339395f3936305f3732302e706e67">
 					</p>
-					<p class="rvps2"><img alt="" style="padding : 1px;" src="https://i.blogs.es/91493f/sequelize/1366_2000.png">
-					</p>
-					<p class="rvps2"><img alt="" style="padding : 1px;"
+					<p class="rvps2">
+						<img alt="Sequelize" style="padding : 1px; margin-left: 12em;" width="200" height="200"
+							src="http://assets.stickpng.com/thumbs/58482ee4cef1014c0b5e4a75.png">
+						<img alt="MySQL" style="padding : 1px; margin-left: 8em;" width="400" height="200"
 							src="https://d1.awsstatic.com/asset-repository/products/amazon-rds/1024px-MySQL.ff87215b43fd7292af172e2a5d9b844217262571.png">
 					</p>
 					<p class="rvps2"><span class="rvts11"></span><span class="rvts6"></span></p>
